--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,38 @@
 version: '3.8'
 
 services:
-  postgres:
+  backend:
+    build: .
+    container_name: clinic-backend
+    ports:
+      - '3000:3000'
+    volumes:
+      - ./uploads:/app/uploads
+    environment:
+      - NODE_ENV=production
+      - DATABASE_URL=postgres://postgres:postgres@db:5432/clinic
+    depends_on:
+      - db
+
+  frontend:
+    build:
+      context: ./client
+    container_name: clinic-frontend
+    ports:
+      - '3001:80'
+    depends_on:
+      - backend
+
+  db:
     image: postgres:15
     container_name: clinic-db
-    ports:
-      - "5432:5432"
+    restart: always
     environment:
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: 118896
+      POSTGRES_PASSWORD: postgres
       POSTGRES_DB: clinic
+    ports:
+      - '5432:5432'
     volumes:
       - pgdata:/var/lib/postgresql/data
 
